[package]
name = "whatsappweb"
version = "0.0.2"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
build = "build.rs"
description = "WIP Whatsapp Web API Client"
repository = "https://github.com/wiomoc/whatsappweb-rs"
readme = "README.md"
categories = ["api"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16

[dependencies]
ws = {version = "0.9.1", features = ["ssl"]}
log = "0.4"
simple_logger = "1.6"
url = "2.1"
json = "0.12"
ring = "0.13"
base64 = "0.12"
qrcode = "0.12"
image = "0.23"
untrusted = "0.6"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.2"
byteorder = "1.3"
protobuf = "2.14"
chrono = "0.4"
reqwest = { version = "0.10", optional = true}
error-chain = "0.12"

[features]
default-features = ["media"]
"media" = ["reqwest"]

[build-dependencies]
protobuf-codegen-pure = "2.14"